[B]Version 5.0.27 (December 09, 2018)[/B]
- Code Base Changes:
    - new sorting method
- Resolvers Added:
    - fembed
    - fileholic
    - movierulz
- Resolvers Fixed/Updated:
    - mehlizmovies
    - premiumize
    - rapidvideo
    - vidup
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.26 (November 27, 2018)[/B]
- Code Base Changes:
    - option to globally disable hosts that use popups
    - better handling of disabling resolvers that use popups
    - aadecode
- Resolvers Added:
    - vevio
    - cloudvideo
    - vkspeed
    - superitu
    - irshare
- Resolvers Fixed/Updated:
    - vidboom
    - vidcloud
    - openload
    - thevid
    - rapidvideo
    - streamango
    - streamable
    - vivosx
    - vidtodo
    - premiumize
- Resolvers Removed
    - thevideo.me
    - many dead hosts
- Languages Added/Updated
    - English
    - English(US)

[B]Version 5.0.24 (October 22, 2018)[/B]
- Code Base Changes:
    - jsunpack
- Resolvers Added:
    - vkprime
    - myupload
    - streamcloud
    - flix555
    - xclip
- Resolvers Fixed/Updated:
    - rapidvideo.com
    - tunepk
    - cda
    - videozoo
    - gounlimited
    - tvlogy
- Resolvers Removed
    - None
- Languages Added/Updated
    - None

[B]Version 5.0.23 (September 20, 2018)[/B]
- Code Base Changes:
    - None
- Resolvers Added:
    - None
- Resolvers Fixed/Updated:
    - rapidvideo.com
    - vidzi
    - powvideo
    - nxload
    - googlevideo
    - estream
- Resolvers Removed
    - None
- Languages Added/Updated
    - None

[B]Version 5.0.22 (August 21, 2018)[/B]
- Code Base Changes:
    - jsunpack
    - common
- Resolvers Added:
    - unitplay
    - tocloud
    - videozupload
- Resolvers Fixed/Updated:
	- anyfiles
	- daclips
	- ecostream
	- fileweed
	- hugefiles
	- movpod
	- mp4stream
	- openload
    - powvideo
    - putvid
    - rapidvideocom
    - teramixer
    - uptobox
    - vk
- Resolvers Removed
    - rapidvideo
- Languages Added/Updated
    - None
