@@ -1,10 +1,11 @@
-[B]Version 5.0.27 (December 09, 2018)[/B]
+[B]Version 5.0.27 (December 13, 2018)[/B]
 - Code Base Changes:
     - new sorting method
 - Resolvers Added:
     - fembed
     - fileholic
     - movierulz
+    - kupload
 - Resolvers Fixed/Updated:
     - mehlizmovies
     - premiumize
